# duetscreen

./: .gitignore  README.md  prompt.txt  pyproject.toml
configs/: config.example.yaml  config.zinc_random100M.json  config.zinc_random100k.json  config.zinc_random1M.json
data/: sample_inputs.csv  sample_ligands.csv
duet_screen/: __init__.py  cli.py  config.py  consensus.py  manifest.py  scheduler.py  utils.py
duet_screen/pipeline/: __init__.py  aggregate.py  data.py  docking.py  dti.py  mmgbsa.py  prep.py  reporting.py  validate.py
hypervs1000/: __init__.py  cli.py  config.py  manifest.py  utils.py
hypervs1000/pipeline/: aggregate.py  data.py  docking.py  dti.py  mmgbsa.py  models.py  prep.py  reporting.py  validate.py
scripts/: build_ligand_library_from_smi.py  create_config.py  download_zinc_purchasable.py  download_zinc_tranche.sh  export_results.py  fetch_zinc_ligands.py  run_pipeline.py
tests/: test_consensus.py  test_end_to_end.py  test_scheduler.py
